codecreature.net/codefiles/full-image.css
.full-image-view {
	z-index: 1001;
	position: fixed;
	top: 0; left: 0;
	width: 100%; height: 100%;
	font-size: 1rem; line-height: 1.25;
	text-align: center;
	
	--accent: var(--white);
	--text: inherit;
	--background: none;
	--border: 1px var(--accent) dashed;
	
	.fiv-button {
		z-index: 2;
		position: absolute;
		color: var(--text);
		font-size: max(3.5vw, 2rem);
		background: none; padding: 0.25em 0.5em; border: none;
	}
	
	#fiv-close { top: 1vw; right: 1vw; }
	#fiv-prev { left: 1vw; top: 50%; transform: translate(0, -50%); }
	#fiv-next { right: 1vw; top: 50%; transform: translate(0, -50%); }
	
	#fiv-clicker {
		z-index: -1;
		width: 100%;
		height: 100%;
		background: black;
		opacity: 0.85;
	}
	
	.fiv-content {
		z-index: 1;
		position: absolute;
		top: 50%; left: 50%;
		transform: translate(-50%, -50%);
		height: fit-content;
		max-height: 95%;
		text-align: center;
	
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		
		div:has(.image) {
			min-height: 0;
			flex-grow: 0;
			img {
				max-width: 85vw;
				max-height: 75vh;
			}
		}
		
		.text {
			max-width: min(550px, 80vw);
			overflow: auto;
			word-wrap: break-word;
			flex-shrink: 1;
			min-height: 0;
			
			background: var(--background);
			padding: .75em 1em 1em 1em;
			margin-top: 1rem;
			border: var(--border);
			
			> * { max-width: 100%; }
		}
		p { margin: .5em auto; }
		a:link { text-decoration: underline; }
		.credit { font-size: 1.25em; font-weight: bold; }
		hr { width: min(100%, 65vw); border: none; border-top: var(--border); }
	}
	
}

